--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "crypto-convert": "^2.1.6",
     "vue": "^3.4.15"
   },
   "devDependencies": {
